k8s-policy-engine/constraints/allow-registries.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-registries
  annotations:
    description: "허용된 컨테이너 이미지 레지스트리 prefix만 사용할 수 있습니다."
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - kube-flannel
      # 관측성 네임스페이스 제외
      # Prometheus/Grafana 이미지 허용
      - monitoring
      - local-path-storage
      - falco
  parameters:
    repos:
      - "docker.io/library/"
      - "docker.io/leeon3345/"
      - "gcr.io/"
      - "ghcr.io/"
      - "registry.k8s.io/"
