k8s-policy-engine/constraints/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNonRoot
metadata:
  name: require-non-root
  annotations:
    description: "모든 Pod의 컨테이너는 root 가 아닌 사용자로 실행되어야 합니다."
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - kube-flannel
      # 관측성 네임스페이스 제외
      # Prometheus/Grafana 설치 보장
      - monitoring
